[SC-10033] - Fix app actions toolbar overlapping issue

--- a/src/app/crm/contacts/operations-widget/operations-widget.component.less
+++ b/src/app/crm/contacts/operations-widget/operations-widget.component.less
@@ -3,8 +3,8 @@
     float: right;
     color: #c5c7ca;
     background: #FFF;
-    width: calc(~"100% - 289px");
-    padding-right: 65px;
+    width: calc(~"100% - 354px");
+    margin-right: 65px;
     white-space: nowrap;
   }
 
